<resources>

    <string name="app_name">まねっこダンス</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_partner">PartnerActivity</string>
    <string name="title_activity_action">ActionActivity</string>
    <string name="title_activity_lesson_list">LessonList</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="button_action">実行</string>
    <string name="Enter">改行</string>
    <string name="hint_text">ここに入力</string>
    <string name="loop">繰り返し</string>
    <string name="koko">ここまで</string>
    <string name="left_hand_up">左腕↑</string>
    <string name="left_hand_down">左腕↓</string>
    <string name="right_hand_up">右腕↑</string>
    <string name="right_hand_down">右腕↓</string>
    <string name="right_foot_up">右足↑</string>
    <string name="right_foot_down">右足↓</string>
    <string name="left_foot_up">左足↑</string>
    <string name="left_foot_down">左足↓</string>
    <string name="jump">ジャンプ</string>
    <string name="partner_screen">お手本</string>
    <string name="player">編集</string>
    <string name="action">判定画面</string>
    <string name="return_action">戻る</string>
    <string name="Title_how_to_play">遊びかた</string>
    <string name="Title_start_button">はじめる</string>
    <string name="look_answer_button">①お手本を見る</string>
    <string name="text_look">まずは、お手本をチェック！</string>
    <string name="player_source_cord">playerSourceCordArea</string>
    <string name="partner_source_cord">お手本のソースコードエリア</string>
    <string name="lesson_information">レッスン情報</string>
    <string name="image_area">image</string>
    <string name="hint_secret">開発者情報</string>
    <string name="hint_player_source_cord">プレイヤーのソースコードが書かれるエリア</string>
    <string name="touch_to_start">touch to start</string>
    <string name="help">ヘルプ</string>
    <string name="back_space">1字戻る</string>
    <string name="answer_lesson1">左腕を上げる\n左腕を下げる\n右腕を上げる\n右腕を下げる</string>
    <string name="answer_lesson2">左足を上げる\n左足を下げる\n右足を上げる\n右足を下げる</string>
    <string name="answer_lesson3">左足を上げる\n左足を下げる\n右足を上げる\n右足を下げる\n左腕を上げる\n左腕を下げる\nジャンプする</string>
    <string name="answer_lesson4">左腕を上げる 右腕を上げる\n左腕を下げる\n右腕を下げる\n左腕を上げる\n右腕を上げる\n左腕を下げる 右腕を下げる</string>
    <string name="answer_lesson5">左腕を上げる 右足を上げる\n左腕を下げる 右足を下げる\n右腕を上げる 左足を上げる\n右腕を下げる 左足を下げる</string>
    <string name="answer_lesson6">左腕を上げる 右腕を上げる\n左腕を下げる 右腕を下げる\n左腕を上げる 左足を上げる\n 右腕を上げる\n 左足を下げる\n左腕を下げる 右腕を下げる\nジャンプする</string>
    <string name="answer_lesson7">loop3\n左足を上げる\n左足を下げる\n右足を上げる\n右足を下げる\nここまで</string>
    <string name="answer_lesson8">loop3\n左足を上げる\n左足を下げる\n右足を上げる\n右足を下げる\nここまで</string>
    <string name="answer_lesson9">loop3\n左足を上げる\n左足を下げる\n右足を上げる\n右足を下げる\nここまで\n loop2\n左腕を上げる 右腕を上げる\n 左腕を下げる 右腕を下げる\nここまで</string>
    <string name="answer_lesson10">loop3\n loop2\n 左腕を上げる 右腕を上げる\n左腕を下げる 右腕を下げる\nここまで\nジャンプする\nここまで</string>
    <string name="answer_lesson11">loop2\n左腕を上げる\n左腕を下げる\nここまで</string>
    <string name="answer_lesson12">loop2\n左腕を上げる\n左腕を下げる\nここまで\nloop2\n右腕を上げる\n右腕を下げる\nここまで</string>
    <string name="answer_lesson13">loop2\nloop2\n左腕を上げる\n左腕を下げる\nここまで\n右腕を上げる\n右腕を下げる\nここまで</string>

    <string-array name="move">
        <item>基本動作</item>
        <item>応用動作</item>
        <item>ジャンプ</item>
        <item>繰り返し</item>
    </string-array>
    <string-array name="help">
        <item>命令一覧</item>
        <item>間違った動作例</item>
        <item>操作方法</item>
        <item>チュートリアル</item>
    </string-array>

    <string name="challenge">②Let\'s チャレンジ！！</string>
    <string name="hantei">判定！</string>
    <string name="player_screen">編集画面</string>
    <string name="look_answer_button2">お手本を見る</string>
    <string name="arrow_right">次へ</string>
    <string name="arrow_left">前へ</string>
    <string name="close">閉じる</string>

</resources>