<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image"
    android:gravity="top" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical|top"
        android:hint="@string/hint_text"
        android:inputType="textMultiLine"
        android:textColor="#000000" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="doActionJump"
        android:text="@string/jump" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button11"
        android:onClick="doActionKoko"
        android:text="@string/koko" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_alignParentRight="true"
        android:onClick="doActionEnter"
        android:text="@string/Enter" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_toLeftOf="@+id/button8"
        android:onClick="doActionLoop"
        android:text="@string/loop" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button11"
        android:layout_toLeftOf="@+id/button11"
        android:onClick="doActionLeftFootDown"
        android:text="@string/left_foot_down" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_toLeftOf="@+id/button10"
        android:onClick="doActionLeftFootUp"
        android:text="@string/left_foot_up" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="doActionRightFootDown"
        android:text="@string/right_foot_down" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="doActionRightFootUp"
        android:text="@string/right_foot_up" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="doActionLeftHandDown"
        android:text="@string/left_hand_down" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:onClick="doActionLeftHandUp"
        android:text="@string/left_hand_up" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="doActionRightHandDown"
        android:text="@string/right_hand_down" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_alignLeft="@+id/button9"
        android:onClick="doActionRightHandUp"
        android:text="@string/right_hand_up" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button10"
        android:layout_toRightOf="@+id/button9"
        android:text="@string/button_action" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignParentRight="true"
        android:text="@string/return_action" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignParentRight="true" >

        <ImageView
            android:id="@+id/playerLeftHand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/playerLeftHand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/playerLeftHand3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="invisible" />
        
        <ImageView
            android:id="@+id/playerRightHand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/right_hand_up_piyo1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/playerRightHand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/right_hand_up_piyo2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/playerRightHand3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/right_hand_up_piyo3"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/playerBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/basic_piyo"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/playerLeftFoot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/left_foot_up_piyo1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/playerLeftFoot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/left_foot_up_piyo2"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/playerLeftFoot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/left_foot_up_piyo3"
            android:visibility="invisible" />
        
        <ImageView
            android:id="@+id/playerRightFoot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="visible" />
        
        <ImageView
            android:id="@+id/playerRightFoot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="invisible" />
        
        <ImageView
            android:id="@+id/playerRightFoot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:visibility="invisible" />

    </FrameLayout>

</RelativeLayout>