<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center_vertical|top"
        android:hint="@string/hint_text"
        android:inputType="textMultiLine"
        android:textColor="#ffffff"
        android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/hint_secret"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_area" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView2"
        android:text="@string/look_answer_button" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/partnerLeftHand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:fitsSystemWindows="true"
            android:src="@drawable/cocco_left_hand_up1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/partnerRightHand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/cocco_right_hand_up1"
            android:visibility="visible" />
        
        <ImageView
            android:id="@+id/partnerBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/cocco_basic"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/partnerLeftFoot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/cocco_left_foot_up1"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/partnerRightFoot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_area"
            android:src="@drawable/cocco_right_foot_up1"
            android:visibility="visible" />

    </FrameLayout>

</RelativeLayout>